deploy: cc8988bda284bcb1d74e4338b1adf90f3a155756

--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,14 @@
 <!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=generator content="Qubt theme for Hugo"><title>yuma.run</title>
 <meta name=title content="yuma.run"><meta name=author content="Yuma Ishikawa"><link type=text/css rel=stylesheet href=/css/main.bundle.min.a22730fdd3cc07d9c93ca48acba7923b2b14510e1c925c0caccb3049713e7098d3aa77911bfa9524926f8d7242e7097ee57f8048260d44f2938f4ec5f82a2373.css integrity="sha512-oicw/dPMB9nJPKSKy6eSOysUUQ4cklwMrMswSXE+cJjTqneRG/qVJJJvjXJC5wl+5X+ASCYNRPKTj07F+Cojcw=="><script defer src=/js/main.bundle.min.4657c962c90bb42241e3db9c00332ac44a2ff6a901654b8248b4e2f4b586571fd2aa672dcadf728d6f2135b0ea6088f21d1cf5302b4cae8557e0593f70081d72.js integrity="sha512-RlfJYskLtCJB49ucADMqxEov9qkBZUuCSLTi9LWGVx/Sqmctyt9yjW8hNbDqYIjyHRz1MCtMroVX4Fk/cAgdcg=="></script><link rel=apple-touch-icon sizes=180x180 href=/icon_hu3001583574468276548.png><link rel=icon type=image/png sizes=32x32 href=/icon_hu17138870165079908475.png><meta property="og:url" content="/about/"><meta property="og:site_name" content="yuma.run"><meta property="og:title" content="yuma.run"><meta property="og:description" content="ソフトウェアエンジニアです。
 バックエンド、インフラ、SRE、Platform Engineeringに関心があります。
-Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - NeoVim Neovim the Song (10X Developer) - YouTube
+Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - Neovim Neovim the Song (10X Developer) - YouTube
 Experience 株式会社ispec 2019/10 ~ 2024/9
 VPoEとして開発業務に従事しました。
 主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。
 Hobby Sake 日本酒と焼酎とビールが好きです。
 日本酒は甘いやつが好きです。"><meta property="og:locale" content="en"><meta property="og:type" content="article"><meta name=twitter:card content="summary"><meta name=twitter:title content="yuma.run"><meta name=twitter:description content="ソフトウェアエンジニアです。
 バックエンド、インフラ、SRE、Platform Engineeringに関心があります。
-Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - NeoVim Neovim the Song (10X Developer) - YouTube
+Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - Neovim Neovim the Song (10X Developer) - YouTube
 Experience 株式会社ispec 2019/10 ~ 2024/9
 VPoEとして開発業務に従事しました。
 主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。
@@ -32,8 +32,18 @@ Hobby Sake 日本酒と焼酎とビールが好きです。
 - Terraform
 - Docker
 - GitHub Actions
-</code></pre><h3 id=tools>Tools</h3><pre tabindex=0><code>- NeoVim
-</code></pre><p><a href="https://www.youtube.com/watch?v=sdZTiIu-j2g">Neovim the Song (10X Developer) - YouTube</a></p><h3 id=experience>Experience</h3><ul><li><a href=https://ispec.tech/>株式会社ispec</a></li></ul><p>2019/10 ~ 2024/9</p><p>VPoEとして開発業務に従事しました。</p><p>主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。</p><hr><h2 id=hobby>Hobby</h2><h3 id=sake>Sake</h3><p>日本酒と焼酎とビールが好きです。</p><p>日本酒は甘いやつが好きです。</p><p>焼酎は水割りかお湯わりに梅干し入れて飲むのが好きです。</p><p>米焼酎はソーダで割るのも好きです。</p><h3 id=cooking>Cooking</h3><p>料理が好きです。</p><p>中華が好きで中華鍋を持っています。</p><h3 id=ramen>Ramen</h3><p>家系ラーメンが好きです。</p><p>直系店のような醤油バチバチ系が特に好きです。</p><p>お好みは固め・多めかコレステロールを気にして固めです。</p><h3 id=manga>Manga</h3><p>スラムダンクとバガボンドが好きです。</p><p>つまり井上雄彦先生が好きです。</p><h3 id=game>Game</h3><p>リフレッシュにゲームをやります。</p><p>PS5でApex Legends、Valorant、FIFAをやっています。</p><h3 id=workout>WorkOut</h3><p>HIITのジムに通っています。</p><p>たまに競技場に走りに行きます。</p><p>たまにフットサルもやります。</p><h3 id=football>FootBall</h3><p>欧州サッカーのにわかファンです。</p><p>ハイライトでキャッチアップしています。</p><h3 id=music>Music</h3><p>ジャンルは問いませんが、邦楽が好きです。</p><pre tabindex=0><code>- 野狐禅
+</code></pre><h3 id=tools>Tools</h3><pre tabindex=0><code>- Neovim
+</code></pre><p><a href="https://www.youtube.com/watch?v=sdZTiIu-j2g">Neovim the Song (10X Developer) - YouTube</a></p><h3 id=experience>Experience</h3><ul><li><a href=https://ispec.tech/>株式会社ispec</a></li></ul><p>2019/10 ~ 2024/9</p><p>VPoEとして開発業務に従事しました。</p><p>主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。</p><hr><h2 id=hobby>Hobby</h2><h3 id=sake>Sake</h3><p>日本酒と焼酎とビールが好きです。</p><p>日本酒は甘いやつが好きです。</p><p>焼酎は水割りかお湯わりに梅干し入れて飲むのが好きです。</p><p>米焼酎はソーダで割るのも好きです。</p><pre tabindex=0><code>日本酒:
+- 醸し人九平次
+- 新政 No.6
+- 而今
+- 十四代
+
+焼酎:
+- 七田
+- 海鴉
+- りしり
+</code></pre><h3 id=cooking>Cooking</h3><p>料理が好きです。</p><p>中華が好きで中華鍋を持っています。</p><h3 id=ramen>Ramen</h3><p>家系ラーメンが好きです。</p><p>直系店のような醤油バチバチ系が特に好きです。</p><p>お好みは固め・多めかコレステロールを気にして固めです。</p><h3 id=manga>Manga</h3><p>スラムダンクとバガボンドが好きです。</p><p>つまり井上雄彦先生が好きです。</p><h3 id=game>Game</h3><p>リフレッシュにゲームをやります。</p><p>PS5でApex Legends、Valorant、FIFAをやっています。</p><h3 id=workout>WorkOut</h3><p>HIITのジムに通っています。</p><p>たまに競技場に走りに行きます。</p><p>たまにフットサルもやります。誘ってください！</p><h3 id=football>FootBall</h3><p>欧州サッカーのにわかファンです。</p><p>ハイライトでキャッチアップしています。</p><h3 id=music>Music</h3><p>ジャンルは問いませんが、邦楽が好きです。</p><pre tabindex=0><code>- 野狐禅
 - 神門
 - 狐火
 - ブルーハーツ
@@ -47,6 +57,6 @@ Hobby Sake 日本酒と焼酎とビールが好きです。
 - ちあきなおみ
 - 石川さゆり
 - ノリアキ
-</code></pre><h3 id=owarai>Owarai</h3><p>お笑いが好きです。</p><p>ジャルジャルタワーは毎日見ています。</p><h3 id=inu>Inu</h3><p>犬が好きです。</p><p>可愛いからです。</p></span></article></div></main></div><footer><div class="flex flex-col justify-center p-10"><p class="text-center text-slate-700 dark:text-slate-400">&copy;
+</code></pre><h3 id=owarai>Owarai</h3><p>お笑いが好きです。</p><p>ジャルジャルタワーを毎日見ています。</p><h3 id=inu>Inu</h3><p>犬が好きです。</p><p>可愛いからです。</p></span></article></div></main></div><footer><div class="flex flex-col justify-center p-10"><p class="text-center text-slate-700 dark:text-slate-400">&copy;
 2024
 Yuma Ishikawa</p><p class="text-center text-sm text-slate-700 dark:text-slate-400">Published with <a class="hover:underline hover:decoration-indigo-500 hover:text-indigo-500" href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> & <a class="hover:underline hover:decoration-indigo-500 hover:text-indigo-500" href=https://github.com/chrede88/qubt target=_blank rel="noopener noreferrer">Qubt</a></p></div></footer></body></html>
