deploy: 27b2d68c47493212cbeb3f5490b2a6cc3f7841af

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,13 @@ Hobby Sake 日本酒と焼酎とビールが好きです。
 - 七田
 - 海鴉
 - りしり
-</code></pre><h3 id=cooking>Cooking</h3><p>料理が好きです。</p><p>中華が好きで中華鍋を持っています。</p><h3 id=ramen>Ramen</h3><p>家系ラーメンが好きです。</p><p>直系店のような醤油バチバチ系が特に好きです。</p><p>お好みは固め・多めかコレステロールを気にして固めです。</p><h3 id=manga>Manga</h3><p>スラムダンクとバガボンドが好きです。</p><p>つまり井上雄彦先生が好きです。</p><h3 id=game>Game</h3><p>リフレッシュにゲームをやります。</p><p>PS5でApex Legends、Valorant、FIFAをやっています。</p><h3 id=workout>WorkOut</h3><p>HIITのジムに通っています。</p><p>たまに競技場に走りに行きます。</p><p>たまにフットサルもやります。誘ってください！</p><h3 id=football>FootBall</h3><p>欧州サッカーのにわかファンです。</p><p>ハイライトでキャッチアップしています。</p><h3 id=music>Music</h3><p>ジャンルは問いませんが、邦楽が好きです。</p><pre tabindex=0><code>- 野狐禅
+</code></pre><h3 id=cooking>Cooking</h3><p>料理が好きです。</p><p>中華が好きで中華鍋を持っています。</p><h3 id=ramen>Ramen</h3><p>家系ラーメンが好きです。</p><p>直系店のような醤油バチバチ系が特に好きです。</p><p>お好みは固め・多めかコレステロールを気にして固めです。</p><pre tabindex=0><code>- 吉村家
+- 末廣家
+- 王道家 柏
+- クックら
+- たま家
+- 麺家たいせい
+</code></pre><h3 id=manga>Manga</h3><p>スラムダンクとバガボンドが好きです。</p><p>つまり井上雄彦先生が好きです。</p><h3 id=game>Game</h3><p>リフレッシュにゲームをやります。</p><p>PS5でApex Legends、Valorant、FIFAをやっています。</p><h3 id=workout>WorkOut</h3><p>HIITのジムに通っています。</p><p>たまに競技場に走りに行きます。</p><p>たまにフットサルもやります。誘ってください！</p><h3 id=football>FootBall</h3><p>欧州サッカーのにわかファンです。</p><p>ハイライトでキャッチアップしています。</p><h3 id=music>Music</h3><p>ジャンルは問いませんが、邦楽が好きです。</p><pre tabindex=0><code>- 野狐禅
 - 神門
 - 狐火
 - ブルーハーツ
