--- a/about/index.html
+++ b/about/index.html
@@ -2,18 +2,16 @@
 <meta name=title content="yuma.run"><meta name=author content="Yuma Ishikawa"><link type=text/css rel=stylesheet href=/css/main.bundle.min.a22730fdd3cc07d9c93ca48acba7923b2b14510e1c925c0caccb3049713e7098d3aa77911bfa9524926f8d7242e7097ee57f8048260d44f2938f4ec5f82a2373.css integrity="sha512-oicw/dPMB9nJPKSKy6eSOysUUQ4cklwMrMswSXE+cJjTqneRG/qVJJJvjXJC5wl+5X+ASCYNRPKTj07F+Cojcw=="><script defer src=/js/main.bundle.min.4657c962c90bb42241e3db9c00332ac44a2ff6a901654b8248b4e2f4b586571fd2aa672dcadf728d6f2135b0ea6088f21d1cf5302b4cae8557e0593f70081d72.js integrity="sha512-RlfJYskLtCJB49ucADMqxEov9qkBZUuCSLTi9LWGVx/Sqmctyt9yjW8hNbDqYIjyHRz1MCtMroVX4Fk/cAgdcg=="></script><link rel=apple-touch-icon sizes=180x180 href=/icon_hu3001583574468276548.png><link rel=icon type=image/png sizes=32x32 href=/icon_hu17138870165079908475.png><meta property="og:url" content="/about/"><meta property="og:site_name" content="yuma.run"><meta property="og:title" content="yuma.run"><meta property="og:description" content="ソフトウェアエンジニアです。
 バックエンド、インフラ、SRE、Platform Engineeringに関心があります。
 Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - Neovim Neovim the Song (10X Developer) - YouTube
-Experience 株式会社ispec 2019/10 ~ 2024/9
-VPoEとして開発業務に従事しました。
-主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。
-Hobby Sake 日本酒と焼酎とビールが好きです。
-日本酒は甘いやつが好きです。"><meta property="og:locale" content="en"><meta property="og:type" content="article"><meta name=twitter:card content="summary"><meta name=twitter:title content="yuma.run"><meta name=twitter:description content="ソフトウェアエンジニアです。
+Experience 株式会社ナレッジワーク 2024/10 ~
+Software Engineerとして開発業務に従事しています。
+株式会社ispec 2019/10 ~ 2024/9
+VPoEとして開発業務に従事しました。"><meta property="og:locale" content="en"><meta property="og:type" content="article"><meta name=twitter:card content="summary"><meta name=twitter:title content="yuma.run"><meta name=twitter:description content="ソフトウェアエンジニアです。
 バックエンド、インフラ、SRE、Platform Engineeringに関心があります。
 Work Skills - vim - Ruby - Go - TypeScript - Deno - AWS - Amazon ECS - Terraform - Docker - GitHub Actions Tools - Neovim Neovim the Song (10X Developer) - YouTube
-Experience 株式会社ispec 2019/10 ~ 2024/9
-VPoEとして開発業務に従事しました。
-主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。
-Hobby Sake 日本酒と焼酎とビールが好きです。
-日本酒は甘いやつが好きです。"><script>localStorage.getItem("color-theme")==="dark"||!("color-theme"in localStorage)&&window.matchMedia("(prefers-color-scheme: dark)").matches?document.documentElement.classList.add("dark"):document.documentElement.classList.remove("dark")</script></head><body class="flex h-screen flex-col justify-between bg-neutral-100 dark:bg-neutral-800"><div><header class="sticky top-0 z-10 bg-neutral-100 dark:bg-neutral-800"><section class="mx-auto flex max-w-screen-xl items-center justify-between p-4"><a href=/ class="flex items-center space-x-3"><span class="self-center whitespace-nowrap text-2xl font-semibold text-slate-700 dark:text-slate-400">yuma.run</span></a><div class="flex flex-row space-x-8"><nav class="hidden space-x-8 text-xl md:block" aria-label=main><a href=/ class="px-3 py-2 text-slate-700 hover:text-indigo-500 md:p-0 dark:text-slate-400">Home
+Experience 株式会社ナレッジワーク 2024/10 ~
+Software Engineerとして開発業務に従事しています。
+株式会社ispec 2019/10 ~ 2024/9
+VPoEとして開発業務に従事しました。"><script>localStorage.getItem("color-theme")==="dark"||!("color-theme"in localStorage)&&window.matchMedia("(prefers-color-scheme: dark)").matches?document.documentElement.classList.add("dark"):document.documentElement.classList.remove("dark")</script></head><body class="flex h-screen flex-col justify-between bg-neutral-100 dark:bg-neutral-800"><div><header class="sticky top-0 z-10 bg-neutral-100 dark:bg-neutral-800"><section class="mx-auto flex max-w-screen-xl items-center justify-between p-4"><a href=/ class="flex items-center space-x-3"><span class="self-center whitespace-nowrap text-2xl font-semibold text-slate-700 dark:text-slate-400">yuma.run</span></a><div class="flex flex-row space-x-8"><nav class="hidden space-x-8 text-xl md:block" aria-label=main><a href=/ class="px-3 py-2 text-slate-700 hover:text-indigo-500 md:p-0 dark:text-slate-400">Home
 </a><a href=/about/ class="px-3 py-2 text-slate-700 hover:text-indigo-500 md:p-0 dark:text-slate-400">About</a></nav><button id=theme-toggle type=button class="rounded-lg text-sm text-slate-700 hover:text-indigo-500 dark:text-slate-400" aria-label=theme-switcher>
 <svg id="theme-toggle-dark-icon" class="hidden h-6 w-6" fill="currentcolor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001.0 1010.586 10.586z"/></svg>
 <svg id="theme-toggle-light-icon" class="hidden h-6 w-6" fill="currentcolor" viewBox="0 0 20 20"><path d="M10 2a1 1 0 011 1v1A1 1 0 119 4V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707A1 1 0 1113.536 5.05l.707-.707a1 1 0 011.414.0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707A1 1 0 004.343 5.757l.707.707zm1.414 8.486-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"/></svg>
@@ -33,7 +31,7 @@ Hobby Sake 日本酒と焼酎とビールが好きです。
 - Docker
 - GitHub Actions
 </code></pre><h3 id=tools>Tools</h3><pre tabindex=0><code>- Neovim
-</code></pre><p><a href="https://www.youtube.com/watch?v=sdZTiIu-j2g">Neovim the Song (10X Developer) - YouTube</a></p><h3 id=experience>Experience</h3><ul><li><a href=https://ispec.tech/>株式会社ispec</a></li></ul><p>2019/10 ~ 2024/9</p><p>VPoEとして開発業務に従事しました。</p><p>主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。</p><hr><h2 id=hobby>Hobby</h2><h3 id=sake>Sake</h3><p>日本酒と焼酎とビールが好きです。</p><p>日本酒は甘いやつが好きです。</p><p>焼酎は水割りかお湯わりに梅干し入れて飲むのが好きです。</p><p>米焼酎はソーダで割るのも好きです。</p><pre tabindex=0><code>日本酒:
+</code></pre><p><a href="https://www.youtube.com/watch?v=sdZTiIu-j2g">Neovim the Song (10X Developer) - YouTube</a></p><h3 id=experience>Experience</h3><ul><li><a href=https://kwork.studio>株式会社ナレッジワーク</a></li></ul><p>2024/10 ~</p><p>Software Engineerとして開発業務に従事しています。</p><ul><li><a href=https://ispec.tech/>株式会社ispec</a></li></ul><p>2019/10 ~ 2024/9</p><p>VPoEとして開発業務に従事しました。</p><p>主にRuby,Goを用いたバックエンド開発とAWSを用いたインフラ構築を行いました。</p><hr><h2 id=hobby>Hobby</h2><h3 id=sake>Sake</h3><p>日本酒と焼酎とビールが好きです。</p><p>日本酒は甘いやつが好きです。</p><p>焼酎は水割りかお湯わりに梅干し入れて飲むのが好きです。</p><p>米焼酎はソーダで割るのも好きです。</p><pre tabindex=0><code>日本酒:
 - 醸し人九平次
 - 新政 No.6
 - 而今
@@ -62,6 +60,6 @@ Hobby Sake 日本酒と焼酎とビールが好きです。
 - サンボマスター
 - ちあきなおみ
 - ノリアキ
-</code></pre><h3 id=owarai>Owarai</h3><p>お笑いが好きです。</p><p>ジャルジャルタワーを毎日見ています。</p><h3 id=inu>Inu</h3><p>犬が好きです。</p><p>可愛いからです。</p><div class=container><div id=player-wrapper class=my-5></div></div><script type=text/javascript src=https://cdn.jsdelivr.net/npm/@clappr/player@latest/dist/clappr.min.js></script><script>var playerElement=document.getElementById("player-wrapper"),player=new Clappr.Player({source:"https://i.gyazo.com/36e6d25e0240c0ab83f38c08a4c403e8.mp4",mute:!0,height:360,width:640});player.attachTo(playerElement)</script></span></article></div></main></div><footer><div class="flex flex-col justify-center p-10"><p class="text-center text-slate-700 dark:text-slate-400">&copy;
+</code></pre><h3 id=owarai>Owarai</h3><p>お笑いが好きです。</p><p>ジャルジャルタワーを毎日見ています。</p><h3 id=inu>Inu</h3><p>犬が好きです。</p><p>可愛いからです。</p><div class=container><div id=player-wrapper></div></div><script type=text/javascript src=https://cdn.jsdelivr.net/npm/@clappr/player@latest/dist/clappr.min.js></script><script>var playerElement=document.getElementById("player-wrapper"),player=new Clappr.Player({source:"https://i.gyazo.com/36e6d25e0240c0ab83f38c08a4c403e8.mp4",mute:!0,width:"100%"});player.attachTo(playerElement)</script></span></article></div></main></div><footer><div class="flex flex-col justify-center p-10"><p class="text-center text-slate-700 dark:text-slate-400">&copy;
 2024
 Yuma Ishikawa</p><p class="text-center text-sm text-slate-700 dark:text-slate-400">Published with <a class="hover:underline hover:decoration-indigo-500 hover:text-indigo-500" href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> & <a class="hover:underline hover:decoration-indigo-500 hover:text-indigo-500" href=https://github.com/chrede88/qubt target=_blank rel="noopener noreferrer">Qubt</a></p></div></footer></body></html>
